--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="pt-BR">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Início</title>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.0/dist/mindar-image-aframe.prod.js"></script>
   </head>
@@ -16,7 +17,7 @@
       
       <a-entity mindar-image-target="targetIndex: 0">
        
-        <a-gltf-model rotation="-90 0 0 " position="0 0 0" scale="-0.5 -0.5 -0.5" src="#avatarModel" >
+        <a-gltf-model rotation="-90 0 0 " position="0 0 0" scale="-0.5 -0.5 -0.5" src="#avatarModel" ></a-gltf-model>
       </a-entity>
     </a-scene>
   </body>
